# free-range-zoo

./: .gitattributes  .gitignore  README.md  TODO.md  clear_notebooks_util.sh  flake.nix  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  docs.yml  lint.yml  merge.yml  pr.yml  test-docs.yml  test.yml
docs/: README.md  pyproject.toml
docs/free_range_zoo_docs/: __init__.py  gen_envs_docstrings.py  gen_envs_mds.py
docs/source/: conf.py  index.md
docs/source/api/: logging.md
docs/source/environments/cybersecurity/: baselines.md  index.md  specification.md
docs/source/environments/rideshare/: baselines.md  index.md  specification.md
docs/source/environments/wildfire/: index.md  specification.md
docs/source/events/moasei-2025/: faq.md  index.md  quickstart_cyber.md  quickstart_fire.md
docs/source/events/moasei-2026/: environment_initialization.md  evaluation.md  faq.md  index.md  quickstart_cyber.md  quickstart_fire.md  quickstart_ride.md
docs/source/events/mosaei-2025/: environment_initialization.md  evaluation.md  faq.md  index.md  quickstart.md  quickstart_cyber.md  quickstart_fire.md  quickstart_ride.md
docs/source/introduction/: basic_usage.md  installation.md  moasei.md  quickstart.md
docs/tests/: test_build.py
free_range_zoo/: __init__.py
free_range_zoo/envs/: rideshare_v0.py  wildfire_v0.py
free_range_zoo/envs/cybersecurity/: README.md
free_range_zoo/envs/cybersecurity/baselines/: camp.py  exploited.py  noop.py  patched.py  random.py
free_range_zoo/envs/cybersecurity/env/: cybersecurity.py
free_range_zoo/envs/cybersecurity/env/spaces/: actions.py  observations.py
free_range_zoo/envs/cybersecurity/env/structures/: configuration.py  state.py
free_range_zoo/envs/rideshare/: README.md  __init__.py
free_range_zoo/envs/rideshare/baselines/: __init__.py  fifo_Tfocus.py  fifo_Tglobal.py  first_in_first_out.py  greedy_Tfocus.py  greedy_Tglobal.py  random.py
free_range_zoo/envs/rideshare/env/: rideshare.py
free_range_zoo/envs/wildfire/: README.md  __init__.py
free_range_zoo/envs/wildfire/baselines/: __init__.py  random.py  strongest.py  weakest.py
free_range_zoo/envs/wildfire/configs/: aaai_2024.py
free_range_zoo/envs/wildfire/env/: wildfire.py
free_range_zoo/utils/: agent.py  all_modules.py  caching.py  configuration.py  conversions.py  convert_sql_logs.py  dataset.py  env.py  logging_handlers.py  mem_restrict.py  random_generator.py  sql_logging.py  state.py
free_range_zoo/wrappers/: action_task.py  passthrough.py  space_validator.py  utils.py  wrapper_util.py
tests/free_range_zoo/envs/wildfire/: test_configs.py
tests/free_range_zoo/utils/: test_caching.py  test_configuration.py  test_conversions.py  test_dataset.py  test_env.py  test_logging.py  test_mem_restrict.py  test_random_generator.py  test_state.py
tests/profiles/: environment_profile.py  examine_stats.py
tests/utils/: cybersecurity_configs.py  rideshare_configs.py  wildfire_configs.py
(+56 files in other folders)
