[tool.poetry]
name = "free-range-zoo"
version = "0.1.0"
description = ""
authors = ["C4 Patino <cpatino2@huskers.unl.edu>", "Daniel Redder <daniel.redder@uga.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = "1.0.0a2"
pettingzoo = "^1.24.3"
torch-geometric = "^2.5.3"
supersuit = "^3.9.3"
tensordict = "^0.5.0"
torchaudio = "^2.4.0"
torchvision = "^0.19.0"
xxhash = "^3.5.0"
yapf = "^0.40.2"

[tool.poetry.group.scripts.dependencies]
jupyter = "^1.0.0"
neptune = "^1.11.1"
neptune-optuna = "^1.3.0"
optuna = "^4.0.0"
termcolor = "^2.4.0"
pygame = "^2.6.0"
rich = "^13.9.1"
slurm_tuner = { git = "https://github.com/C4theBomb/slurm-tuner" }

[tool.poetry.group.docs.dependencies]
free-range-zoo-docs = { path = "docs", develop = true }

[tool.poetry.group.models]
optional = true

[tool.poetry.group.models.dependencies]
planning = { path = "models/planning", develop = true }

[tool.pycodestyle]
max-line-length = 130
ignore = ["E402", "W503"]

[tool.flake8]
max-complexity = 25

[tool.yapf]
COLUMN_LIMIT = 130

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
