[tool.poetry]
name = "free-range-zoo-docs"
version = "0.1.0"
description = "Sphinx documentation package for free-range-zoo"
authors = ["Daniel Redder <daniel.redder@uga.edu>", "C4 Patino <cpatino2@huskers.unl.edu>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
gen = "free_range_zoo_docs:gen"
sync = "free_range_zoo_docs:sync"
build = "free_range_zoo_docs:build"
watch = "free_range_zoo_docs:watch"
test = "free_range_zoo_docs:test"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.4.7"
sphinx-autobuild = "^2024.10.3"
myst-parser = "^4.0.0"
sphinx-github-changelog = "^1.4.0"
furo = { git = "https://github.com/oasys-mas/Celshast#egg=furo" }
pytest = "^8.3.3"
pytest-markdown-docs = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
